VM exits if MaxTenuringThreshold is set below the default InitialTenuringThreshold, and InitialTenuringThreshold is not set

XMLWordPrintable

    • gc
    • b33

        If the user sets the MaxTenuringThreshold below the default InitialTenuringThreshold, and not set InitialTenuringThreshold to <= MaxTenuringThreshold at the same time, the VM fails at startup.

        Fix: adjust InitialTenuringThreshold to MaxTenuringThreshold if InitialTenuringThreshold is the default value.

              Assignee:
              Thomas Schatzl
              Reporter:
              Thomas Schatzl
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: